# helloworld

./: CMakeLists.txt  HelloWorld.sln  README.md  shippable.yml
HelloWorld/: HelloWorld.cpp  HelloWorld.vcxproj
